# rayter-generator

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
rayter_generator/: env.py  games.py  global_chart.py  main.py  players.py  render.py  settings.py
rayter_generator/static/css/: main.css
rayter_generator/static/js/: charts.js
rayter_generator/templates/: base.html  game.html  index.html  player.html
tests/: test_generator.py
